--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,6 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+*.dll
+packages/Newtonsoft.Json.9.0.1/lib/net20/Newtonsoft.Json.xml
+packages/Newtonsoft.Json.9.0.1/lib/net40/Newtonsoft.Json.xml
